fix when text in row is too long, the edit icon is moved away

--- a/ProgressTracker/ProgressTracker.MVC/wwwroot/sass/site.scss
+++ b/ProgressTracker/ProgressTracker.MVC/wwwroot/sass/site.scss
@@ -146,3 +146,15 @@ ul * {
    justify-content: center;
    text-align: center;
 }
+
+#main .table * {
+   color: inherit;
+}
+
+#collection-table {
+   td {
+      word-break: break-all;
+      padding-left: 20px;
+      padding-right: 20px;
+   }
+}
